--- a/scss/_ls-vars.scss
+++ b/scss/_ls-vars.scss
@@ -90,6 +90,8 @@ html[data-theme="dark"] {
   --ls-page-inline-code-color: var(--ctp-page-inline-code-color);
   --ls-page-inline-code-bg-color: var(--ctp-page-inline-code-bg-color);
 
+  --ls-page-mark-color: var(--ctp-base);
+
   --ls-scrollbar-foreground-color: var(--ctp-scrollbar-foreground-color);
   --ls-scrollbar-background-color: var(--ctp-scrollbar-background-color);
   --ls-scrollbar-thumb-hover-color: var(--ctp-scrollbar-thumb-hover-color);
